Fix line wrapping for long code samples

--- a/css/temp.css
+++ b/css/temp.css
@@ -8,6 +8,9 @@
 code {
   white-space: nowrap !important;
 }
+pre {
+  white-space: pre-wrap !important;
+}
 
 .toc-nav
 {
